Fixed background flickering frmo scrollbar. Fixed tailwind-elements import. Added lightbox functionality to carousel. Optimized gLightBox loading workflow. Added image optimizations to projectSingle.html pages. Fixed aspect ratio on carousel.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,10 +14,42 @@
 	border: 1px solid red;
 }
 
+/* Duplicate classes to increase specificity. Used to override blowfish's prose padding added to the first child. */
+.max-w-prose.max-w-prose.max-w-prose.max-w-prose .ignore-Prose-Padding {
+	margin-top: 0;
+}
+
 details {
 	height: var(--collapsed);
 	transition: height 300ms cubic-bezier(0.4, 0.01, 0.165, 0.99);
 }
 details[open] {
 	height: var(--expanded);
+}
+
+/* From: https://css-tricks.com/aspect-ratio-boxes/ */
+[style*="--aspect-ratio"] > :first-child {
+	width: 100%;
+}
+
+[style*="--aspect-ratio"] > img {  
+	height: auto;
+} 
+
+@supports (--custom:property) {
+[style*="--aspect-ratio"] {
+	position: relative;
+}
+
+[style*="--aspect-ratio"]::before {
+	content: "";
+	display: block;
+	padding-bottom: calc(100% / (var(--aspect-ratio)));
+}  
+
+[style*="--aspect-ratio"] > :first-child {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
 }
